--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   <link rel="stylesheet" href="./styles/style.css">
-
+  
   <title>Frontend Mentor | News homepage</title>
-
+  
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
@@ -20,14 +20,27 @@
     <nav>
       <img class="logo" src="./assets/images/logo.svg" alt="Logo">
       <ul class="flex">
+        <img src="./assets/images/icon-menu-close.svg" alt="">
         <li>Home</li>
         <li>New</li>
         <li>Popular</li>
         <li>Trending</li>
         <li>Categories</li>
       </ul>
+      <img class="menuBtn" src="./assets/images/icon-menu.svg" alt="menu">
     </nav>
   </header>
+  <div class="black">
+    <div class="side">
+      <img class="menuBtn" src="./assets/images/icon-menu-close.svg" alt="close">
+      <ul class="flex">
+        <li>Home</li>
+        <li>New</li>
+        <li>Popular</li>
+        <li>Trending</li>
+        <li>Categories</li>
+    </div>
+  </div>
   <div class="grid-container">
     <main>
       <img src="./assets/images/image-web-3-mobile.jpg" alt="illustration">
@@ -86,5 +99,6 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div>
+  <script src="./index.js"></script> 
 </body>
 </html>
