--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   </div>
   <div class="grid-container">
     <main>
-      <img src="./assets/images/image-web-3-mobile.jpg" alt="illustration">
+      <div><img src="./assets/images/image-web-3-mobile.jpg" alt="illustration"></div>
       <h1>The Bright Future of Web 3.0?</h1>
       <section class="text">
         <p>We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
@@ -95,7 +95,7 @@
     </article>
   </div>
 
-  <div class="attribution">
+  <div class="attribution" style="margin-top: 5rem;">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div>
